--- a/InternationalTradingData/InternationalTradingData.csproj
+++ b/InternationalTradingData/InternationalTradingData.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Country.cs" />
     <Compile Include="CountryParser.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
