BinaryTree partially implmented.
BinaryTree has been implmented to a degree. Awating comments and tests.
Covers tree traversal, node population tree height, contains in addition
node verb functions which are either implmented or expect the child
class to implement.

--- a/InternationalTradingData/InternationalTradingData.csproj
+++ b/InternationalTradingData/InternationalTradingData.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryTree.cs" />
+    <Compile Include="BSTree.cs" />
     <Compile Include="Country.cs" />
     <Compile Include="CountryParser.cs" />
     <Compile Include="Node.cs" />
