--- a/InternationalTradingData/InternationalTradingData.csproj
+++ b/InternationalTradingData/InternationalTradingData.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BinaryTree.cs" />
     <Compile Include="BSTree.cs" />
     <Compile Include="Country.cs" />
+    <Compile Include="CountryBSTree.cs" />
     <Compile Include="CountryParser.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
