--- a/InternationalTradingData/InternationalTradingData.csproj
+++ b/InternationalTradingData/InternationalTradingData.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AVLTree.cs" />
     <Compile Include="BinaryTree.cs" />
     <Compile Include="BSTree.cs" />
     <Compile Include="Country.cs" />
