--- a/InternationalTradingData/InternationalTradingData.csproj
+++ b/InternationalTradingData/InternationalTradingData.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BinaryTree.cs" />
     <Compile Include="BSTree.cs" />
     <Compile Include="Country.cs" />
+    <Compile Include="CountryAVLTree.cs" />
     <Compile Include="CountryBSTree.cs" />
     <Compile Include="CountryParser.cs" />
     <Compile Include="Node.cs" />
