--- a/InternationalTradingData/InternationalTradingData.csproj
+++ b/InternationalTradingData/InternationalTradingData.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchCountryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SearchCountryForm.Designer.cs">
+      <DependentUpon>SearchCountryForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -71,6 +77,9 @@
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SearchCountryForm.resx">
+      <DependentUpon>SearchCountryForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
