--- a/InternationalTradingData/InternationalTradingData.csproj
+++ b/InternationalTradingData/InternationalTradingData.csproj
@@ -76,6 +76,12 @@
     <Compile Include="SearchTradeForm.Designer.cs">
       <DependentUpon>SearchTradeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="TradePotentialDialogue.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TradePotentialDialogue.Designer.cs">
+      <DependentUpon>TradePotentialDialogue.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SearchTradeForm.resx">
       <DependentUpon>SearchTradeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TradePotentialDialogue.resx">
+      <DependentUpon>TradePotentialDialogue.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
