Countries csv added.

--- a/InternationalTradingData.Tests/InternationalTradingData.Tests.csproj
+++ b/InternationalTradingData.Tests/InternationalTradingData.Tests.csproj
@@ -42,6 +42,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="countries.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
