--- a/InternationalTradingData.Tests/InternationalTradingData.Tests.csproj
+++ b/InternationalTradingData.Tests/InternationalTradingData.Tests.csproj
@@ -38,7 +38,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tests.cs" />
+    <Compile Include="BinaryTreeTests.cs" />
+    <Compile Include="BSTreeTests.cs" />
+    <Compile Include="CountryBSTreeTests.cs" />
+    <Compile Include="CountryParserTests.cs" />
+    <Compile Include="CountryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
